# voicemux

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  INSTALL.md  PROVIDERS.md  RUNNING.md  STACK.md  VOICEMODE.md
examples/: voicemode.env  voicemux.yaml
scripts/: install-service.ps1  install-service.sh
src/: config.rs  main.rs  openai.rs  providers.rs  routing.rs  state.rs
