[package]
name = "voicemux"
version = "0.1.0"
edition = "2021"
description = "OpenAI-compatible STT/TTS router for local and cloud speech providers."
license = "MIT"
repository = "https://github.com/dotCipher/voicemux"

[dependencies]
anyhow = "1"
axum = "0.7"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
