[package]
name = "voicemux"
version = "0.1.0"
edition = "2021"
description = "OpenAI-compatible STT/TTS router for local and cloud speech providers."
license = "MIT"
repository = "https://github.com/dotCipher/voicemux"
homepage = "https://github.com/dotCipher/voicemux"
readme = "README.md"
keywords = ["stt", "tts", "openai", "speech", "proxy"]
categories = ["multimedia::audio", "web-programming::http-server", "command-line-utilities"]

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["multipart"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net"] }
tower-http = { version = "0.6", features = ["timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
